# python-flask-restful-mongodb-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  README.pt.md  docker-compose.yml  dotenv.test  pyproject.toml  requirements.txt  run.py  setup.cfg  sonar-project.properties
.github/workflows/: build.yml
app/: app.py  cache.py  config.py
app/api/: routes.py
app/api/business/: common.py  recipes.py
app/api/exceptions/: common.py  recipes.py
app/api/query/: common.py  recipes.py
app/api/rest/: recipes.py
app/api/schema/: recipes.py
app/common/: __init__.py  settings.py
app/model/: recipes.py
migrations/: 20210405143815.py
postman/: Example.postman_collection.json
test/: conftest.py
test/app/api/query/: test_common.py
test/app/api/rest/: test_recipe.py
test/app/common/: test_settings.py
test/fixture/: app_fixture.py
